# kursach_3

./: .coverage  README.md  pyproject.toml
src/: main.py  utils.py
tests/: test_utils.py
